--- a/project1/src/Components/Login.css
+++ b/project1/src/Components/Login.css
@@ -1,25 +1,28 @@
-.container-fluid{
+.container-fluid {
     background-color: #346C7D;
-    height: 800px;
-    position: fixed;
+    height: 600px;
+    /* position: fixed; */
 }
-.card-wrapper h3{
+
+.card-wrapper h3 {
     color: white;
     text-align: center;
-    margin-top: 200px;
+    margin-top: 100px;
     letter-spacing: 2px;
     margin-bottom: 30px;
 
 }
-.card-wrapper .login-wrapper label{
+
+.card-wrapper .login-wrapper label {
     color: white;
     margin-top: 30px;
     float: left;
-    margin-left: 40px ;
-    margin-bottom: -10px  !important;
+    margin-left: 40px;
+    margin-bottom: -10px !important;
 
 }
-.card-wrapper .login-wrapper input{
+
+.card-wrapper .login-wrapper input {
     background-color: transparent;
     margin: 20px;
     width: 300px;
@@ -28,18 +31,20 @@
     border-left: none;
     border-right: none;
     border-top: none;
-    border-bottom:0.5px solid white;
+    border-bottom: 0.5px solid white;
 }
-input:focus{
+
+input:focus {
     outline: none;
 }
 
-.card-wrapper .login-wrapper{
+.card-wrapper .login-wrapper {
     width: 400px;
 
-   background-color:  #385563;
+    background-color: #385563;
 }
-.login-wrapper .login-btn{
+
+.login-wrapper .login-btn {
     border: none;
     float: left;
     font-weight: bold;
@@ -49,7 +54,8 @@ input:focus{
     margin-bottom: 20px;
     margin-left: 40px;
 }
-.login-wrapper .bottom-text{
+
+.login-wrapper .bottom-text {
     float: left;
     margin-left: 40px;
     font-weight: bolder;
